syntax = "proto3";

package merchant_branch;

import "commons.proto";

message UpdateMerchantBranchInput {
    int32 id = 1;
    MerchantBranch data = 2;
}

message FindMerchantPayload {
    repeated MerchantBranch merchantBranches = 1;
}

message InputCreateRequest {
    string email = 1;
    string password = 2;
    string confirmPassword = 3;
    string fullName = 4;
    string phone = 5;
    string merchantPhone = 6;
    string merchantName = 7;
    string merchantAddress = 8;
    int32 cityCode = 9;
    int32 districtCode = 10;
    int32 wardCode = 11;
    string merchantSubdomain = 12;
    int32 profileId = 13;
}

message MerchantBranch {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    string address = 4;
    optional int32 cityCode = 5;
    optional int32 districtCode = 6;
    optional int32 wardCode = 7;
    int32 createdAt = 8;
    int32 updatedAt = 9;
    int32 merchantId = 10;
    int32 profileId = 11;
}

service MerchantBranchServiceGrpc {
    rpc find (commons.Query) returns (FindMerchantPayload) {}
    rpc findOne (commons.Query) returns (MerchantBranch) {}
    rpc findById (commons.Id) returns (MerchantBranch) {}
    rpc create (InputCreateRequest) returns (MerchantBranch) {}
    rpc update (UpdateMerchantBranchInput) returns (MerchantBranch) {}
    rpc destroy (commons.Query) returns (commons.Count) {}
    rpc count (InputCreateRequest) returns (commons.Count) {}
}
